# infinity

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  PATENTS.md  README.md  SECURITY.md  SPEC_v0_1.md  SPEC_v0_2.md  SPEC_v0_6_unification.md  bootstrap.sh  docker-compose.yml  pyproject.toml  requirements-serve.txt
.github/: PULL_REQUEST_TEMPLATE.md
ero/: __init__.py  adapters.py  audit.py  citation_verifier.py  cli.py  contracts.py  framing.py  openai_api.py  orchestrator.py  provenance.py  sandbox.py  store_readers.py  unified_store.py  wiring.py
eval/: CORRECTION_3arm.md  REPORT_3arm_english.md  REPORT_behavioral_relabel.md  REPORT_depth.md  REPORT_depth_v2.md  REPORT_depth_v3.md  REPORT_profile_compare.md  REPORT_strong_raw.md  REPORT_v0_12_routing_n100.md  REPORT_v0_13_routing_n100.md  ROUTING_FIX_v0_13.md  baseline_3arm.py  behavioral_relabel.py  depth_eval.py  depth_eval_v2.py  depth_eval_v3.py  profile_depth_compare.py  rows_3arm.jsonl  rows_behavioral_relabel.jsonl  rows_depth.jsonl  rows_depth_v2.jsonl  rows_depth_v3.jsonl  rows_profile_compare.jsonl  rows_strong_raw.jsonl  rows_v0_12_n100.jsonl  run_quality_eval.py  strong_raw_eval.py
paper/: DRAFT_question_depth_v0_1.md  DRAFT_question_depth_v0_5.md  Depth_Not_Restraint_Zenodo_v0_7.md
scripts/: dualread_verify.py  dualwrite_both_verify.py  dualwrite_verify.py  integrated_loop.py  mmv_dualread_verify.py  smoke_isolated.py  smoke_live.py  smoke_vendor.py  unified_view_demo.py
tests/: test_cli.py  test_dualwrite.py  test_openai_api.py  test_provenance.py  (+5 more)
(+3 files in other folders)
